<resources>
    <string name="app_name">Swipe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>



    <string name="pref_sync">Swipe</string>


    <string name="pref_sync_summ">Swipe</string>


    <string name="pref_syncConnectionType">Swipe</string>

    <string name="pref_syncConnectionTypes_default">Swipe</string>





    <string name="AccountInfo">Account Information</string>

    <string name="Title1">Email:</string>
    <string name="Summary1">Please Enter Your Email</string>

    <string name="CourseInfo">Course Information</string>

    <string name="Title2">Major:</string>
    <string name="Summary2">Please Enter Your Major</string>
    <string name="Title3">Minor:</string>
    <string name="Summary3">Please Enter Your Minor</string>
    <string name="Title4">Upper Level Concentration:</string>
    <string name="Summary4">Please Enter Your Upper Level Concentration</string>
    <string name="Title5">Day of the Week:</string>
    <string name="Summary5">Pick The Days Of The Week</string>

    <string name="editTextPref_title">Pick The Days Of The Week</string>
    <string name="timePrefA_title">Starting Time:</string>
    <string name="timePrefB_title">Ending Time:</string>
</resources>
