<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Account Information">

    <EditTextPreference
        android:key="email"
        android:title="@string/Title1"
        android:defaultValue="@string/Summary1"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="Course Information">


    <ListPreference
        android:dependency="Title2"
        android:key="Title2"
        android:title="@string/Title2"
        android:dialogTitle="@string/Title2"
        android:entries="@array/major"
        android:entryValues="@array/major"
        android:defaultValue="@string/Title2" />

    <ListPreference
        android:dependency="Title3"
        android:key="Title3"
        android:title="@string/Title3"
        android:dialogTitle="@string/Title3"
        android:entries="@array/minor"
        android:entryValues="@array/minor"
        android:defaultValue="@string/Title3" />


    <ListPreference
        android:dependency="Title4"
        android:key="Title4"
        android:title="@string/Title4"
        android:dialogTitle="@string/Title4"
        android:entries="@array/upperlevel"
        android:entryValues="@array/upperlevel"
        android:defaultValue="@string/Title4" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Schedule Preference">
    <MultiSelectListPreference
        android:dependency="Title5"
        android:key="Title5"
        android:title="@string/Title5"
        android:dialogTitle="@string/Title5"
        android:entries="@array/day"
        android:entryValues="@array/day"
        android:defaultValue="@string/Title5" />


        <com.alantran.android.swipe.TimePreference
            android:key="StartTime"
            android:title="@string/timePrefA_title"/>
        <com.alantran.android.swipe.TimePreference
            android:key="timePrefB_Key"
            android:title="@string/timePrefB_title"/>

    </PreferenceCategory>


</PreferenceScreen>